# virtual-truck-control

lane_detection_ros2/: CMakeLists.txt
lane_detection_ros2/include/: lane_detect.hpp
lane_detection_ros2/src/: lane_detect.cpp
lane_keeping/include/: lane_keeping.hpp
lane_keeping/src/: lane_keeping.cpp
scale_truck_control_ros2/config/: LV.yaml
scale_truck_control_ros2/launch/: LV.launch.py
scale_truck_control_ros2/src/: lrc.cpp  scale_truck_control.cpp
vehicle_control/: CMakeLists.txt  package.xml
vehicle_control/include/: vehicle_control_node.hpp
vehicle_control/src/: .speed_control_node.cpp.swp  vehicle_control_node.cpp
